{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 66,
  "lineage": "8ccd0ebb-697f-71cf-7880-7fbf0098f454",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0447e94a0a3184a80",
            "association_id": "eipassoc-03892398c34e6a345",
            "domain": "vpc",
            "id": "eipalloc-0447e94a0a3184a80",
            "network_border_group": "us-west-2",
            "network_interface": "eni-075a0fcd3db83ae1e",
            "private_dns": "ip-10-0-1-24.us-west-2.compute.internal",
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-35-80-129-11.us-west-2.compute.amazonaws.com",
            "public_ip": "35.80.129.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip"
            },
            "tags_all": {
              "Name": "nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d70546e43a941d70",
            "arn": "arn:aws:ec2:us-west-2:802679893191:instance/i-0af334c9562474c3b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af334c9562474c3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3ea9595c129ba4c",
            "private_dns": "ip-10-0-3-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9eddb97531e89f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0af6144536939acd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01db9433ace859d72",
            "tags": {
              "Name": "application"
            },
            "tags_all": {
              "Name": "application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af6144536939acd0"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin",
            "aws_security_group.ssh-and-port3000",
            "aws_subnet.private-sub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d70546e43a941d70",
            "arn": "arn:aws:ec2:us-west-2:802679893191:instance/i-0212d1bfbbd5b10eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0212d1bfbbd5b10eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0687472bc830466",
            "private_dns": "ip-10-0-1-63.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-54-245-76-82.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.76.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da5f60cf8cd07ec4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abed57239997985d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0662ff502e8234b",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0abed57239997985d"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin",
            "aws_security_group.allow_ssh",
            "aws_subnet.public-sub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:internet-gateway/igw-010475e4cac8d6efd",
            "id": "igw-010475e4cac8d6efd",
            "owner_id": "802679893191",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0447e94a0a3184a80",
            "connectivity_type": "public",
            "id": "nat-0f5c68c4c23f7f2be",
            "network_interface_id": "eni-075a0fcd3db83ae1e",
            "private_ip": "10.0.1.24",
            "public_ip": "35.80.129.11",
            "subnet_id": "subnet-0e0662ff502e8234b",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.tf-igw",
            "aws_subnet.public-sub-1",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:route-table/rtb-0c786a88b026ef88b",
            "id": "rtb-0c786a88b026ef88b",
            "owner_id": "802679893191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010475e4cac8d6efd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-routes"
            },
            "tags_all": {
              "Name": "igw-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:route-table/rtb-071da3e2491b8b940",
            "id": "rtb-071da3e2491b8b940",
            "owner_id": "802679893191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5c68c4c23f7f2be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-routes"
            },
            "tags_all": {
              "Name": "nat-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat",
            "aws_subnet.public-sub-1",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-route-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3be89b0afaa0da7",
            "route_table_id": "rtb-0c786a88b026ef88b",
            "subnet_id": "subnet-0e0662ff502e8234b"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.igw-routes",
            "aws_subnet.public-sub-1",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-route-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b70813196056fef",
            "route_table_id": "rtb-0c786a88b026ef88b",
            "subnet_id": "subnet-075a0c40438e72f71"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.igw-routes",
            "aws_subnet.public-sub-2",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-route-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07404f6ef09c63b56",
            "route_table_id": "rtb-071da3e2491b8b940",
            "subnet_id": "subnet-01db9433ace859d72"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat",
            "aws_route_table.nat-routes",
            "aws_subnet.private-sub-1",
            "aws_subnet.public-sub-1",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-route-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384482c4fc4f4f7f",
            "route_table_id": "rtb-071da3e2491b8b940",
            "subnet_id": "subnet-04c754b1adaa44b54"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat",
            "aws_route_table.nat-routes",
            "aws_subnet.private-sub-2",
            "aws_subnet.public-sub-1",
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:security-group/sg-0abed57239997985d",
            "description": "allow_ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abed57239997985d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "802679893191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-and-port3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:security-group/sg-0af6144536939acd0",
            "description": "ssh-and-port3000 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af6144536939acd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-and-port3000",
            "name_prefix": "",
            "owner_id": "802679893191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-and-port3000"
            },
            "tags_all": {
              "Name": "ssh-and-port3000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:subnet/subnet-01db9433ace859d72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01db9433ace859d72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:subnet/subnet-04c754b1adaa44b54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c754b1adaa44b54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:subnet/subnet-0e0662ff502e8234b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0662ff502e8234b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:subnet/subnet-075a0c40438e72f71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075a0c40438e72f71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0cde27a6086dc399e"
          },
          "dependencies": [
            "aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-playground",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:802679893191:vpc/vpc-0cde27a6086dc399e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e962b622c60dfd7",
            "default_route_table_id": "rtb-0005f9651608e628c",
            "default_security_group_id": "sg-00dbe439f87f5d855",
            "dhcp_options_id": "dopt-08ed99cfc0dfc260d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cde27a6086dc399e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0005f9651608e628c",
            "owner_id": "802679893191",
            "tags": {
              "Name": "tf-playground"
            },
            "tags_all": {
              "Name": "tf-playground"
            }
          }
        }
      ]
    }
  ]
}